Stream Language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ATTACH
    EOF
    EVENT
    NE
    NEWLINE
    STREAM

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement -> declaration
Rule 3     statement -> expression SEMICOLON
Rule 4     statement -> return_statement SEMICOLON
Rule 5     statement -> control_flow
Rule 6     statement -> assignment SEMICOLON
Rule 7     statement_list -> statement
Rule 8     statement_list -> statement_list statement
Rule 9     function_call -> IDENTIFIER LPAREN opt_arg_list RPAREN
Rule 10    opt_arg_list -> arg_list
Rule 11    opt_arg_list -> empty
Rule 12    arg_list -> expression
Rule 13    arg_list -> arg_list COMMA expression
Rule 14    function_definition -> FN IDENTIFIER LPAREN opt_param_list RPAREN block_statement
Rule 15    function_definition -> FN IDENTIFIER LPAREN opt_param_list RPAREN typehint block_statement
Rule 16    return_statement -> RETURN expression
Rule 17    block_statement -> LBRACE statement_list RBRACE
Rule 18    lambda_function -> FN LPAREN opt_param_list RPAREN LAMBDA block_statement
Rule 19    lambda_function -> FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
Rule 20    lambda_function -> LPAREN opt_param_list RPAREN LAMBDA block_statement
Rule 21    lambda_function -> LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
Rule 22    lambda_function -> LPAREN opt_param_list RPAREN LAMBDA logic_expression
Rule 23    opt_param_list -> param_list
Rule 24    opt_param_list -> empty
Rule 25    param_list -> param
Rule 26    param_list -> param_list COMMA param
Rule 27    param -> IDENTIFIER
Rule 28    param -> IDENTIFIER typehint
Rule 29    declaration -> VAR declaration_base SEMICOLON
Rule 30    declaration -> CONST declaration_base SEMICOLON
Rule 31    declaration -> function_definition
Rule 32    declaration_base -> IDENTIFIER
Rule 33    declaration_base -> IDENTIFIER ASSIGN expression
Rule 34    declaration_base -> IDENTIFIER typehint
Rule 35    declaration_base -> IDENTIFIER typehint ASSIGN expression
Rule 36    typehint -> TYPEHINTCOLON type
Rule 37    type -> SINT
Rule 38    type -> SFLOAT
Rule 39    type -> SSTRING
Rule 40    type -> SBOOL
Rule 41    type -> SSTREAM
Rule 42    type -> SEVENT
Rule 43    ptype -> INT
Rule 44    ptype -> FLOAT
Rule 45    ptype -> STRING
Rule 46    ptype -> TRUE
Rule 47    ptype -> FALSE
Rule 48    binary_arithmetic_operation_rest -> PLUS expression
Rule 49    binary_arithmetic_operation_rest -> MINUS expression
Rule 50    binary_arithmetic_operation_rest -> MULTIPLY expression
Rule 51    binary_arithmetic_operation_rest -> DIVIDE expression
Rule 52    binary_arithmetic_operation -> expression binary_arithmetic_operation_rest
Rule 53    binary_arithmetic_operation -> ptype binary_arithmetic_operation_rest
Rule 54    unary_arithmetic_operation -> MINUS expression
Rule 55    unary_arithmetic_operation -> PLUS expression
Rule 56    binary_logic_operation -> expression binary_logic_operation_rest
Rule 57    binary_logic_operation -> ptype binary_logic_operation_rest
Rule 58    binary_logic_operation_rest -> EQUALS ptype
Rule 59    binary_logic_operation_rest -> GT ptype
Rule 60    binary_logic_operation_rest -> LT ptype
Rule 61    binary_logic_operation_rest -> GE ptype
Rule 62    binary_logic_operation_rest -> LE ptype
Rule 63    binary_logic_operation_rest -> AND ptype
Rule 64    binary_logic_operation_rest -> OR ptype
Rule 65    binary_logic_operation_rest -> EQUALS expression
Rule 66    binary_logic_operation_rest -> GT expression
Rule 67    binary_logic_operation_rest -> LT expression
Rule 68    binary_logic_operation_rest -> GE expression
Rule 69    binary_logic_operation_rest -> LE expression
Rule 70    binary_logic_operation_rest -> AND expression
Rule 71    binary_logic_operation_rest -> OR expression
Rule 72    unary_logic_operation -> NOT expression
Rule 73    logic_expression -> binary_logic_operation
Rule 74    logic_expression -> unary_logic_operation
Rule 75    function_call_expression -> function_call
Rule 76    object_call_expression -> expression CALL function_call_expression
Rule 77    stream_operation -> unary_stream_operation
Rule 78    stream_operation -> binary_stream_operation
Rule 79    stream_operation -> special_stream_operation
Rule 80    unary_stream_operation -> IDENTIFIER TO_STREAM
Rule 81    binary_stream_operation -> IDENTIFIER CHAIN IDENTIFIER
Rule 82    binary_stream_operation -> IDENTIFIER STREAMSPLIT IDENTIFIER
Rule 83    binary_stream_operation -> IDENTIFIER STREAMMERGE IDENTIFIER
Rule 84    binary_stream_operation -> IDENTIFIER FEEDBACK IDENTIFIER
Rule 85    special_stream_operation -> expression FILTEROP LPAREN lambda_function RPAREN expression
Rule 86    special_stream_operation -> expression MAP LPAREN lambda_function RPAREN expression
Rule 87    special_stream_operation -> expression REDUCE LPAREN lambda_function RPAREN expression
Rule 88    simple_expression -> ptype
Rule 89    simple_expression -> type
Rule 90    simple_expression -> IDENTIFIER
Rule 91    simple_expression -> LPAREN expression RPAREN
Rule 92    simple_expression -> lambda_function
Rule 93    complex_expression -> binary_arithmetic_operation
Rule 94    complex_expression -> unary_arithmetic_operation
Rule 95    complex_expression -> logic_expression
Rule 96    complex_expression -> function_call_expression
Rule 97    complex_expression -> object_call_expression
Rule 98    complex_expression -> stream_operation
Rule 99    expression -> simple_expression
Rule 100   expression -> complex_expression
Rule 101   expression -> LPAREN expression RPAREN
Rule 102   control_flow -> conditional
Rule 103   control_flow -> loop
Rule 104   conditional -> IF LPAREN expression RPAREN block_statement ELSE block_statement
Rule 105   conditional -> IF LPAREN expression RPAREN block_statement
Rule 106   loop -> FOR LPAREN declaration SEMICOLON expression SEMICOLON expression RPAREN block_statement
Rule 107   loop -> WHILE LPAREN expression RPAREN block_statement
Rule 108   assignment -> IDENTIFIER ASSIGN expression
Rule 109   empty -> <empty>

Terminals, with rules where they appear

AND                  : 63 70
ASSIGN               : 33 35 108
ATTACH               : 
CALL                 : 76
CHAIN                : 81
COMMA                : 13 26
CONST                : 30
DIVIDE               : 51
ELSE                 : 104
EOF                  : 
EQUALS               : 58 65
EVENT                : 
FALSE                : 47
FEEDBACK             : 84
FILTEROP             : 85
FLOAT                : 44
FN                   : 14 15 18 19
FOR                  : 106
GE                   : 61 68
GT                   : 59 66
IDENTIFIER           : 9 14 15 27 28 32 33 34 35 80 81 81 82 82 83 83 84 84 90 108
IF                   : 104 105
INT                  : 43
LAMBDA               : 18 19 20 21 22
LBRACE               : 17
LE                   : 62 69
LPAREN               : 9 14 15 18 19 20 21 22 85 86 87 91 101 104 105 106 107
LT                   : 60 67
MAP                  : 86
MINUS                : 49 54
MULTIPLY             : 50
NE                   : 
NEWLINE              : 
NOT                  : 72
OR                   : 64 71
PLUS                 : 48 55
RBRACE               : 17
REDUCE               : 87
RETURN               : 16
RPAREN               : 9 14 15 18 19 20 21 22 85 86 87 91 101 104 105 106 107
SBOOL                : 40
SEMICOLON            : 3 4 6 29 30 106 106
SEVENT               : 42
SFLOAT               : 38
SINT                 : 37
SSTREAM              : 41
SSTRING              : 39
STREAM               : 
STREAMMERGE          : 83
STREAMSPLIT          : 82
STRING               : 45
TO_STREAM            : 80
TRUE                 : 46
TYPEHINTCOLON        : 36
VAR                  : 29
WHILE                : 107
error                : 

Nonterminals, with rules where they appear

arg_list             : 10 13
assignment           : 6
binary_arithmetic_operation : 93
binary_arithmetic_operation_rest : 52 53
binary_logic_operation : 73
binary_logic_operation_rest : 56 57
binary_stream_operation : 78
block_statement      : 14 15 18 19 20 21 104 104 105 106 107
complex_expression   : 100
conditional          : 102
control_flow         : 5
declaration          : 2 106
declaration_base     : 29 30
empty                : 11 24
expression           : 3 12 13 16 33 35 48 49 50 51 52 54 55 56 65 66 67 68 69 70 71 72 76 85 85 86 86 87 87 91 101 104 105 106 106 107 108
function_call        : 75
function_call_expression : 76 96
function_definition  : 31
lambda_function      : 85 86 87 92
logic_expression     : 22 95
loop                 : 103
object_call_expression : 97
opt_arg_list         : 9
opt_param_list       : 14 15 18 19 20 21 22
param                : 25 26
param_list           : 23 26
program              : 0
ptype                : 53 57 58 59 60 61 62 63 64 88
return_statement     : 4
simple_expression    : 99
special_stream_operation : 79
statement            : 7 8
statement_list       : 1 8 17
stream_operation     : 98
type                 : 36 89
typehint             : 15 19 21 28 34 35
unary_arithmetic_operation : 94
unary_logic_operation : 74
unary_stream_operation : 77

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (7) statement_list -> . statement
    (8) statement_list -> . statement_list statement
    (2) statement -> . declaration
    (3) statement -> . expression SEMICOLON
    (4) statement -> . return_statement SEMICOLON
    (5) statement -> . control_flow
    (6) statement -> . assignment SEMICOLON
    (29) declaration -> . VAR declaration_base SEMICOLON
    (30) declaration -> . CONST declaration_base SEMICOLON
    (31) declaration -> . function_definition
    (99) expression -> . simple_expression
    (100) expression -> . complex_expression
    (101) expression -> . LPAREN expression RPAREN
    (16) return_statement -> . RETURN expression
    (102) control_flow -> . conditional
    (103) control_flow -> . loop
    (108) assignment -> . IDENTIFIER ASSIGN expression
    (14) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN block_statement
    (15) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN typehint block_statement
    (88) simple_expression -> . ptype
    (89) simple_expression -> . type
    (90) simple_expression -> . IDENTIFIER
    (91) simple_expression -> . LPAREN expression RPAREN
    (92) simple_expression -> . lambda_function
    (93) complex_expression -> . binary_arithmetic_operation
    (94) complex_expression -> . unary_arithmetic_operation
    (95) complex_expression -> . logic_expression
    (96) complex_expression -> . function_call_expression
    (97) complex_expression -> . object_call_expression
    (98) complex_expression -> . stream_operation
    (104) conditional -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (105) conditional -> . IF LPAREN expression RPAREN block_statement
    (106) loop -> . FOR LPAREN declaration SEMICOLON expression SEMICOLON expression RPAREN block_statement
    (107) loop -> . WHILE LPAREN expression RPAREN block_statement
    (43) ptype -> . INT
    (44) ptype -> . FLOAT
    (45) ptype -> . STRING
    (46) ptype -> . TRUE
    (47) ptype -> . FALSE
    (37) type -> . SINT
    (38) type -> . SFLOAT
    (39) type -> . SSTRING
    (40) type -> . SBOOL
    (41) type -> . SSTREAM
    (42) type -> . SEVENT
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA logic_expression
    (52) binary_arithmetic_operation -> . expression binary_arithmetic_operation_rest
    (53) binary_arithmetic_operation -> . ptype binary_arithmetic_operation_rest
    (54) unary_arithmetic_operation -> . MINUS expression
    (55) unary_arithmetic_operation -> . PLUS expression
    (73) logic_expression -> . binary_logic_operation
    (74) logic_expression -> . unary_logic_operation
    (75) function_call_expression -> . function_call
    (76) object_call_expression -> . expression CALL function_call_expression
    (77) stream_operation -> . unary_stream_operation
    (78) stream_operation -> . binary_stream_operation
    (79) stream_operation -> . special_stream_operation
    (56) binary_logic_operation -> . expression binary_logic_operation_rest
    (57) binary_logic_operation -> . ptype binary_logic_operation_rest
    (72) unary_logic_operation -> . NOT expression
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (80) unary_stream_operation -> . IDENTIFIER TO_STREAM
    (81) binary_stream_operation -> . IDENTIFIER CHAIN IDENTIFIER
    (82) binary_stream_operation -> . IDENTIFIER STREAMSPLIT IDENTIFIER
    (83) binary_stream_operation -> . IDENTIFIER STREAMMERGE IDENTIFIER
    (84) binary_stream_operation -> . IDENTIFIER FEEDBACK IDENTIFIER
    (85) special_stream_operation -> . expression FILTEROP LPAREN lambda_function RPAREN expression
    (86) special_stream_operation -> . expression MAP LPAREN lambda_function RPAREN expression
    (87) special_stream_operation -> . expression REDUCE LPAREN lambda_function RPAREN expression

    VAR             shift and go to state 9
    CONST           shift and go to state 10
    LPAREN          shift and go to state 14
    RETURN          shift and go to state 15
    IDENTIFIER      shift and go to state 18
    FN              shift and go to state 19
    IF              shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    STRING          shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    SINT            shift and go to state 37
    SFLOAT          shift and go to state 38
    SSTRING         shift and go to state 39
    SBOOL           shift and go to state 40
    SSTREAM         shift and go to state 41
    SEVENT          shift and go to state 42
    MINUS           shift and go to state 43
    PLUS            shift and go to state 44
    NOT             shift and go to state 51

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    expression                     shift and go to state 5
    return_statement               shift and go to state 6
    control_flow                   shift and go to state 7
    assignment                     shift and go to state 8
    function_definition            shift and go to state 11
    simple_expression              shift and go to state 12
    complex_expression             shift and go to state 13
    conditional                    shift and go to state 16
    loop                           shift and go to state 17
    ptype                          shift and go to state 20
    type                           shift and go to state 21
    lambda_function                shift and go to state 22
    binary_arithmetic_operation    shift and go to state 23
    unary_arithmetic_operation     shift and go to state 24
    logic_expression               shift and go to state 25
    function_call_expression       shift and go to state 26
    object_call_expression         shift and go to state 27
    stream_operation               shift and go to state 28
    binary_logic_operation         shift and go to state 45
    unary_logic_operation          shift and go to state 46
    function_call                  shift and go to state 47
    unary_stream_operation         shift and go to state 48
    binary_stream_operation        shift and go to state 49
    special_stream_operation       shift and go to state 50

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (8) statement_list -> statement_list . statement
    (2) statement -> . declaration
    (3) statement -> . expression SEMICOLON
    (4) statement -> . return_statement SEMICOLON
    (5) statement -> . control_flow
    (6) statement -> . assignment SEMICOLON
    (29) declaration -> . VAR declaration_base SEMICOLON
    (30) declaration -> . CONST declaration_base SEMICOLON
    (31) declaration -> . function_definition
    (99) expression -> . simple_expression
    (100) expression -> . complex_expression
    (101) expression -> . LPAREN expression RPAREN
    (16) return_statement -> . RETURN expression
    (102) control_flow -> . conditional
    (103) control_flow -> . loop
    (108) assignment -> . IDENTIFIER ASSIGN expression
    (14) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN block_statement
    (15) function_definition -> . FN IDENTIFIER LPAREN opt_param_list RPAREN typehint block_statement
    (88) simple_expression -> . ptype
    (89) simple_expression -> . type
    (90) simple_expression -> . IDENTIFIER
    (91) simple_expression -> . LPAREN expression RPAREN
    (92) simple_expression -> . lambda_function
    (93) complex_expression -> . binary_arithmetic_operation
    (94) complex_expression -> . unary_arithmetic_operation
    (95) complex_expression -> . logic_expression
    (96) complex_expression -> . function_call_expression
    (97) complex_expression -> . object_call_expression
    (98) complex_expression -> . stream_operation
    (104) conditional -> . IF LPAREN expression RPAREN block_statement ELSE block_statement
    (105) conditional -> . IF LPAREN expression RPAREN block_statement
    (106) loop -> . FOR LPAREN declaration SEMICOLON expression SEMICOLON expression RPAREN block_statement
    (107) loop -> . WHILE LPAREN expression RPAREN block_statement
    (43) ptype -> . INT
    (44) ptype -> . FLOAT
    (45) ptype -> . STRING
    (46) ptype -> . TRUE
    (47) ptype -> . FALSE
    (37) type -> . SINT
    (38) type -> . SFLOAT
    (39) type -> . SSTRING
    (40) type -> . SBOOL
    (41) type -> . SSTREAM
    (42) type -> . SEVENT
    (18) lambda_function -> . FN LPAREN opt_param_list RPAREN LAMBDA block_statement
    (19) lambda_function -> . FN LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (20) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA block_statement
    (21) lambda_function -> . LPAREN opt_param_list RPAREN typehint LAMBDA block_statement
    (22) lambda_function -> . LPAREN opt_param_list RPAREN LAMBDA logic_expression
    (52) binary_arithmetic_operation -> . expression binary_arithmetic_operation_rest
    (53) binary_arithmetic_operation -> . ptype binary_arithmetic_operation_rest
    (54) unary_arithmetic_operation -> . MINUS expression
    (55) unary_arithmetic_operation -> . PLUS expression
    (73) logic_expression -> . binary_logic_operation
    (74) logic_expression -> . unary_logic_operation
    (75) function_call_expression -> . function_call
    (76) object_call_expression -> . expression CALL function_call_expression
    (77) stream_operation -> . unary_stream_operation
    (78) stream_operation -> . binary_stream_operation
    (79) stream_operation -> . special_stream_operation
    (56) binary_logic_operation -> . expression binary_logic_operation_rest
    (57) binary_logic_operation -> . ptype binary_logic_operation_rest
    (72) unary_logic_operation -> . NOT expression
    (9) function_call -> . IDENTIFIER LPAREN opt_arg_list RPAREN
    (80) unary_stream_operation -> . IDENTIFIER TO_STREAM
    (81) binary_stream_operation -> . IDENTIFIER CHAIN IDENTIFIER
    (82) binary_stream_operation -> . IDENTIFIER STREAMSPLIT IDENTIFIER
    (83) binary_stream_operation -> . IDENTIFIER STREAMMERGE IDENTIFIER
    (84) binary_stream_operation -> . IDENTIFIER FEEDBACK IDENTIFIER
    (85) special_stream_operation -> . expression FILTEROP LPAREN lambda_function RPAREN expression
    (86) special_stream_operation -> . expression MAP LPAREN lambda_function RPAREN expression
    (87) special_stream_operation -> . expression REDUCE LPAREN lambda_function RPAREN expression

    $end            reduce using rule 1 (program -> statement_list .)
    VAR             shift and go to state 9
    CONST           shift and go to state 10
    LPAREN          shift and go to state 14
    RETURN          shift and go to state 15
    IDENTIFIER      shift and go to state 18
    FN              shift and go to state 19
    IF              shift and go to state 29
    FOR             shift and go to state 30
    WHILE           shift and go to state 31
    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    STRING          shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36
    SINT            shift and go to state 37
    SFLOAT          shift and go to state 38
    SSTRING         shift and go to state 39
    SBOOL           shift and go to state 40
    SSTREAM         shift and go to state 41
    SEVENT          shift and go to state 42
    MINUS           shift and go to state 43
    PLUS            shift and go to state 44
    NOT             shift and go to state 51

    statement                      shift and go to state 52
    declaration                    shift and go to state 4
    expression                     shift and go to state 5
    return_statement               shift and go to state 6
    control_flow                   shift and go to state 7
    assignment                     shift and go to state 8
    function_definition            shift and go to state 11
    simple_expression              shift and go to state 12
    complex_expression             shift and go to state 13
    conditional                    shift and go to state 16
    loop                           shift and go to state 17
    ptype                          shift and go to state 20
    type                           shift and go to state 21
    lambda_function                shift and go to state 22
    binary_arithmetic_operation    shift and go to state 23
    unary_arithmetic_operation     shift and go to state 24
    logic_expression               shift and go to state 25
    function_call_expression       shift and go to state 26
    object_call_expression         shift and go to state 27
    stream_operation               shift and go to state 28
    binary_logic_operation         shift and go to state 45
    unary_logic_operation          shift and go to state 46
    function_call                  shift and go to state 47
    unary_stream_operation         shift and go to state 48
    binary_stream_operation        shift and go to state 49
    special_stream_operation       shift and go to state 50

state 3

    (7) statement_list -> statement .

    VAR             reduce using rule 7 (statement_list -> statement .)
    CONST           reduce using rule 7 (statement_list -> statement .)
    LPAREN          reduce using rule 7 (statement_list -> statement .)
    RETURN          reduce using rule 7 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 7 (statement_list -> statement .)
    FN              reduce using rule 7 (statement_list -> statement .)
    IF              reduce using rule 7 (statement_list -> statement .)
    FOR             reduce using rule 7 (statement_list -> statement .)
    WHILE           reduce using rule 7 (statement_list -> statement .)
    INT             reduce using rule 7 (statement_list -> statement .)
    FLOAT           reduce using rule 7 (statement_list -> statement .)
    STRING          reduce using rule 7 (statement_list -> statement .)
    TRUE            reduce using rule 7 (statement_list -> statement .)
    FALSE           reduce using rule 7 (statement_list -> statement .)
    SINT            reduce using rule 7 (statement_list -> statement .)
    SFLOAT          reduce using rule 7 (statement_list -> statement .)
    SSTRING         reduce using rule 7 (statement_list -> statement .)
    SBOOL           reduce using rule 7 (statement_list -> statement .)
    SSTREAM         reduce using rule 7 (statement_list -> statement .)
    SEVENT          reduce using rule 7 (statement_list -> statement .)
    MINUS           reduce using rule 7 (statement_list -> statement .)
    PLUS            reduce using rule 7 (statement_list -> statement .)
    NOT             reduce using rule 7 (statement_list -> statement .)
    $end            reduce using rule 7 (statement_list -> statement .)
    RBRACE          reduce using rule 7 (statement_list -> statement .)


state 4

    (2) statement -> declaration .

    VAR             reduce using rule 2 (statement -> declaration .)
    CONST           reduce using rule 2 (statement -> declaration .)
    LPAREN          reduce using rule 2 (statement -> declaration .)
    RETURN          reduce using rule 2 (statement -> declaration .)
    IDENTIFIER      reduce using rule 2 (statement -> declaration .)
    FN              reduce using rule 2 (statement -> declaration .)
    IF              reduce using rule 2 (statement -> declaration .)
    FOR             reduce using rule 2 (statement -> declaration .)
    WHILE           reduce using rule 2 (statement -> declaration .)
    INT             reduce using rule 2 (statement -> declaration .)
    FLOAT           reduce using rule 2 (statement -> declaration .)
    STRING          reduce using rule 2 (statement -> declaration .)
    TRUE            reduce using rule 2 (statement -> declaration .)
    FALSE           reduce using rule 2 (statement -> declaration .)
    SINT            reduce using rule 2 (statement -> declaration .)
    SFLOAT          reduce using rule 2 (statement -> declaration .)
    SSTRING         reduce using rule 2 (statement -> declaration .)
    SBOOL           reduce using rule 2 (statement -> declaration .)
    SSTREAM         reduce using rule 2 (statement -> declaration .)
    SEVENT          reduce using rule 2 (statement -> declaration .)
    MINUS           reduce using rule 2 (statement -> declaration .)
    PLUS            reduce using rule 2 (statement -> declaration .)
    NOT             reduce using rule 2 (statement -> declaration .)
    $end            reduce using rule 2 (statement -> declaration .)
    RBRACE          reduce using rule 2 (statement -> declaration .)


state 5

    (3) statement -> expression . SEMICOLON
    (52) binary_arithmetic_operation -> expression . binary_arithmetic_operation_rest
    (76) object_call_expression -> expression . CALL function_call_expression
    (56) binary_logic_operation -> expression . binary_logic_operation_rest
    (85) special_stream_operation -> expression . FILTEROP LPAREN lambda_function RPAREN expression
    (86) special_stream_operation -> expression . MAP LPAREN lambda_function RPAREN expression
    (87) special_stream_operation -> expression . REDUCE LPAREN lambda_function RPAREN expression
    (48) binary_arithmetic_operation_rest -> . PLUS expression
    (49) binary_arithmetic_operation_rest -> . MINUS expression
    (50) binary_arithmetic_operation_rest -> . MULTIPLY expression
    (51) binary_arithmetic_operation_rest -> . DIVIDE expression
    (58) binary_logic_operation_rest -> . EQUALS ptype
    (59) binary_logic_operation_rest -> . GT ptype
    (60) binary_logic_operation_rest -> . LT ptype
    (61) binary_logic_operation_rest -> . GE ptype
    (62) binary_logic_operation_rest -> . LE ptype
    (63) binary_logic_operation_rest -> . AND ptype
    (64) binary_logic_operation_rest -> . OR ptype
    (65) binary_logic_operation_rest -> . EQUALS expression
    (66) binary_logic_operation_rest -> . GT expression
    (67) binary_logic_operation_rest -> . LT expression
    (68) binary_logic_operation_rest -> . GE expression
    (69) binary_logic_operation_rest -> . LE expression
    (70) binary_logic_operation_rest -> . AND expression
    (71) binary_logic_operation_rest -> . OR expression

    SEMICOLON       shift and go to state 53
    CALL            shift and go to state 55
    FILTEROP        shift and go to state 57
    MAP             shift and go to state 58
    REDUCE          shift and go to state 59
    PLUS            shift and go to state 60
    MINUS           shift and go to state 61
    MULTIPLY        shift and go to state 62
    DIVIDE          shift and go to state 63
    EQUALS          shift and go to state 64
    GT              shift and go to state 65
    LT              shift and go to state 66
    GE              shift and go to state 67
    LE              shift and go to state 68
    AND             shift and go to state 69
    OR              shift and go to state 70

    binary_arithmetic_operation_rest shift and go to state 54
    binary_logic_operation_rest    shift and go to state 56

state 6

    (4) statement -> return_statement . SEMICOLON

    SEMICOLON       shift and go to state 71


state 7

    (5) statement -> control_flow .

    VAR             reduce using rule 5 (statement -> control_flow .)
    CONST           reduce using rule 5 (statement -> control_flow .)
    LPAREN          reduce using rule 5 (statement -> control_flow .)
    RETURN          reduce using rule 5 (statement -> control_flow .)
    IDENTIFIER      reduce using rule 5 (statement -> control_flow .)
    FN              reduce using rule 5 (statement -> control_flow .)
    IF              reduce using rule 5 (statement -> control_flow .)
    FOR             reduce using rule 5 (statement -> control_flow .)
    WHILE           reduce using rule 5 (statement -> control_flow .)
    INT             reduce using rule 5 (statement -> control_flow .)
    FLOAT           reduce using rule 5 (statement -> control_flow .)
    STRING          reduce using rule 5 (statement -> control_flow .)
    TRUE            reduce using rule 5 (statement -> control_flow .)
    FALSE           reduce using rule 5 (statement -> control_flow .)
    SINT            reduce using rule 5 (statement -> control_flow .)
    SFLOAT          reduce using rule 5 (statement -> control_flow .)
    SSTRING         reduce using rule 5 (statement -> control_flow .)
    SBOOL           reduce using rule 5 (statement -> control_flow .)
    SSTREAM         reduce using rule 5 (statement -> control_flow .)
    SEVENT          reduce using rule 5 (statement -> control_flow .)
    MINUS           reduce using rule 5 (statement -> control_flow .)
    PLUS            reduce using rule 5 (statement -> control_flow .)
    NOT             reduce using rule 5 (statement -> control_flow .)
    $end            reduce using rule 5 (statement -> control_flow .)
    RBRACE          reduce using rule 5 (statement -> control_flow .)


state 8

    (6) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 72


state 9

    (29) declaration -> VAR . declaration_base SEMICOLON
    (32) declaration_base -> . IDENTIFIER
    (33) declaration_base -> . IDENTIFIER ASSIGN expression
    (34) declaration_base -> . IDENTIFIER typehint
    (35) declaration_base -> . IDENTIFIER typehint ASSIGN expression

    IDENTIFIER      shift and go to state 74

    declaration_base               shift and go to state 73

state 10

    (30) declaration -> CONST . declaration_base SEMICOLON
    (32) declaration_base -> . IDENTIFIER
    (33) declaration_base -> . IDENTIFIER ASSIGN expression
    (34) declaration_base -> . IDENTIFIER typehint
    (35) declaration_base -> . IDENTIFIER typehint ASSIGN expression

    IDENTIFIER      shift and go to state 74

    declaration_base               shift and go to state 75

state 11

    (31) declaration -> function_definition .

    VAR             reduce using rule 31 (declaration -> function_definition .)
    CONST           reduce using rule 31 (declaration -> function_definition .)
    LPAREN          reduce using rule 31 (declaration -> function_definition .)
    RETURN          reduce using rule 31 (declaration -> function_definition .)
    IDENTIFIER      reduce using rule 31 (declaration -> function_definition .)
    FN              reduce using rule 31 (declaration -> function_definition .)
    IF              reduce using rule 31 (declaration -> function_definition .)
    FOR             reduce using rule 31 (declaration -> function_definition .)
    WHILE           reduce using rule 31 (declaration -> function_definition .)
    INT             reduce using rule 31 (declaration -> function_definition .)
    FLOAT           reduce using rule 31 (declaration -> function_definition .)
    STRING          reduce using rule 31 (declaration -> function_definition .)
    TRUE            reduce using rule 31 (declaration -> function_definition .)
    FALSE           reduce using rule 31 (declaration -> function_definition .)
    SINT            reduce using rule 31 (declaration -> function_definition .)
    SFLOAT          reduce using rule 31 (declaration -> function_definition .)
    SSTRING         reduce using rule 31 (declaration -> function_definition .)
    SBOOL           reduce using rule 31 (declaration -> function_definition .)
    SSTREAM         reduce using rule 31 (declaration -> function_definition .)
    SEVENT          reduce using rule 31 (declaration -> function_definition .)
    MINUS           reduce using rule 31 (declaration -> function_definition .)
    PLUS            reduce using rule 31 (declaration -> function_definition .)
    NOT             reduce using rule 31 (declaration -> function_definition .)
    $end            reduce using rule 31 (declaration -> function_definition .)
    SEMICOLON       reduce using rule 31 (declaration -> function_definition .)
    RBRACE          reduce using rule 31 (declaration -> function_definition .)


state 12

    (99) expression -> simple_expression .

    SEMICOLON       reduce using rule 99 (expression -> simple_expression .)
    CALL            reduce using rule 99 (expression -> simple_expression .)
    FILTEROP        reduce using rule 99 (expression -> simple_expression .)
    MAP             reduce using rule 99 (expression -> simple_expression .)
    REDUCE          reduce using rule 99 (expression -> simple_expression .)
    PLUS            reduce using rule 99 (expression -> simple_expression .)
    MINUS           reduce using rule 99 (expression -> simple_expression .)
    MULTIPLY        reduce using rule 99 (expression -> simple_expression .)
    DIVIDE          reduce using rule 99 (expression -> simple_expression .)
    EQUALS          reduce using rule 99 (expression -> simple_expression .)
    GT              reduce using rule 99 (expression -> simple_expression .)
    LT              reduce using rule 99 (expression -> simple_expression .)
    GE              reduce using rule 99 (expression -> simple_expression .)
    LE              reduce using rule 99 (expression -> simple_expression .)
    AND             reduce using rule 99 (expression -> simple_expression .)
    OR              reduce using rule 99 (expression -> simple_expression .)
    RPAREN          reduce using rule 99 (expression -> simple_expression .)
    COMMA           reduce using rule 99 (expression -> simple_expression .)


state 13

    (100) expression -> complex_expression .

    SEMICOLON       reduce using rule 100 (expression -> complex_expression .)
    CALL            reduce using rule 100 (expression -> complex_expression .)
    FILTEROP        reduce using rule 100 (expression -> complex_expression .)
    MAP             reduce using rule 100 (expression -> complex_expression .)
    REDUCE          reduce using rule 100 (expression -> complex_expression .)
    PLUS            reduce using rule 100 (expression -> complex_expression .)
    MINUS           reduce using rule 100 (expression -> complex_expression .)
    MULTIPLY        reduce using rule 100 (expression -> complex_expression .)
    DIVIDE          reduce using rule 100 (expression -> complex_expression .)
    EQUALS          reduce using rule 100 (expression -> complex_expression .)
    GT              reduce using rule 100 (expression -> complex_expression .)
    LT              reduce using rule 100 (expression -> complex_expression .)
    GE              reduce using rule 100 (expression -> complex_expression .)
    LE              reduce using rule 100 (expression -> complex_expression .)
    AND             reduce using rule 100 (expression -> complex_expression .)
    OR              reduce using rule 100 (expression -> complex_expression .)
    RPAREN          reduce using rule 100 (expression -> complex_expression .)
    COMMA           reduce using rule 100 (expression -> complex_expression .)


state 14
